--- a/apps/webapp/src/root.css
+++ b/apps/webapp/src/root.css
@@ -1,3 +1,55 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    --interactive: theme('colors.interactive.9');
+    @apply bg-accent-2 font-sans  overflow-x-hidden;
+    scrollbar-color: var(--interactive) Canvas;
+    color-scheme: light;
+  }
+
+  :root {
+    accent-color: var(--interactive);
+  }
+  :focus-visible {
+    outline-color: var(--interactive);
+  }
+  ::selection {
+    background-color: var(--interactive);
+  }
+  ::marker:not(li) {
+    color: var(--interactive);
+  }
+
+  :is(
+      ::-webkit-calendar-picker-indicator,
+      ::-webkit-clear-button,
+      ::-webkit-inner-spin-button,
+      ::-webkit-outer-spin-button
+    ) {
+    color: var(--interactive);
+  }
+
+  body {
+    @apply text-base flex flex-col min-h-screen text-accent-12;
+  }
+
+  .link {
+    @apply underline hover:no-underline focus:no-underline font-medium text-interactive-11 focus:text-interactive-12;
+  }
+}
+
+@layer components {
+  .container {
+    @apply px-3 w-full max-w-prose;
+  }
+  .form-field--disabled {
+    @apply opacity-50 cursor-not-allowed;
+  }
+  .input--invalid,
+  .input[aria-invalid='true'] {
+    @apply border-opacity-100 bg-negative-3 border-negative-6 focus:border-negative-8 placeholder:text-opacity-75 placeholder:text-negative-11 text-negative-11 !important;
+  }
+}
